Moved "grayed" property to ButtonLCAUtil. Cleanup.